Fix alignment issue

--- a/src/app/dashboard/containers/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/containers/dashboard/dashboard.component.scss
@@ -50,7 +50,8 @@
 
       .sec {
         font-size: 12px;
-        .name, .position {
+        .name,
+        .position {
           padding-right: 25px;
         }
 
